[package]
name = "spark_sdk_example"
description = "Rust sdk example of the Spark"
version = "0.0.1"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"

[dependencies]
spark_sdk = "0.0.2"
src20_sdk = "0.0.3"
fuels = { version = "0.41.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
dotenv = "0.15.0"
